# Laundry-Khalaas-Prototype

./: .env.example  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  deploy-railway.ps1  docker-compose.yml  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/user/: layout.tsx  page.tsx
backend/: .env.example  DELIVERY_NOTES.md  Dockerfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_prototype_orders.py
backend/app/: main.py
backend/app/api/: proto_orders.py  verification.py  whatsapp.py
backend/app/core/: celery_app.py  config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  ai_log.py  conversation.py  customer.py  market.py  order.py
backend/app/schemas/: classifier.py  verification.py
backend/app/services/: privacy.py
backend/app/services/llm/: anthropic_provider.py  base.py  mock_provider.py  service.py
backend/app/tasks/: classifier.py
backend/scripts/: start.sh
backend/tests/: conftest.py  test_classifier.py  test_create_order.py  test_driver_assignment.py  test_health.py  test_llm.py  test_order_transition.py  test_privacy.py  test_redis_ceiling.py  test_schema.py  test_whatsapp_agent.py
components/admin/: AdminLayout.tsx
components/shared/: StatusBadge.tsx
components/user/: UserBottomNav.tsx  UserLayout.tsx
lib/: agent-context.tsx  app-context.tsx  mock-data.ts  unified-chat-service.ts
lib/agents/: intent-classifier.ts  registry.ts  types.ts
(+49 files in other folders)
